2013-06-05  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1280: Updating/Installing OpenJDK should recreate the
	shared class-data archive
	* Makefile.am:
	(.PHONY): Add clean-add-archive, clean-add-archive-debug
	and clean-add-archive-boot.

2013-02-08  Andrew John Hughes  <gnu.andrew@redhat.com>

	PR1301: PR1171 causes Zero builds to fail
	* Makefile.am:
	(add-archive): Don't run -Xshare:dump if building
	Zero.
	(add-archive-debug): Likewise.
	(add-archive-boot): Likewise.

2013-01-25  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am:
	(clean-add-archive): Delete the archive.
	(clean-add-archive-debug): Likewise for debug.
	(clean-add-archive-boot): Likewise for bootstrap.

2012-11-28  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am:
	(add-archive): Only run -Xshare:dump when java
	exists and we aren't building CACAO or JamVM.
	(add-archive-debug): Likewise.
	(add-archive-boot): Likewise.

2012-11-20  Andrew John Hughes  <gnu.andrew@redhat.com>

	RH513605: Updating/Installing OpenJDK should recreate
	the shared class-data archive
	* Makefile.am:
	(add-archive): Run -Xshare:dump on the newly built JDK.
	(clean-add-archive): Delete stamp.
	(add-archive-debug): Same as add-archive for icedtea-debug.
	(clean-add-archive-debug): Same as clean-add-archive for icedtea-debug.
	(icedtea-stage2): Depend on add-archive.
	(clean-icedtea-stage2): Depend on clean-add-archive.
	(icedtea-debug-stage2): Depend on add-archive-debug.
	(clean-icedtea-debug-stage2): Depend on clean-add-archive-debug.
	(add-archive-boot): Same as add-archive for icedtea-boot.
	(clean-add-archive-boot): Same as clean-add-archive for icedtea-boot.
	(icedtea-stage1): Depend on add-archive-boot.
	(clean-icedtea-stage1): Depend on clean-add-archive-boot.
	* NEWS: Mention.

2013-06-05  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1170: Ensure unlimited crypto policy is in place.
	* Makefile.am:
	(CRYPTO_CHECK_BUILD_DIR): New variable.